# concept

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
backend/: __init__.py  accounts.py  categories.py  comments.py  concepts.py  db.py  posts.py  schema.sql  utils.py
backend/auth/: routes.py
backend/database/: connection.py  schema.sql
backend/instance/: config.py
backend/models/: accounts.py  categories.py  comments.py  concepts.py  posts.py  tags.py  users.py
database/: connection.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: app.html  callbacks.svelte.ts  converter.ts  cookie.ts  state.svelte.ts
frontend/src/lib/api/: auth.ts  registration.ts
frontend/src/routes/: +layout.svelte  +page.server.js  +page.svelte
frontend/src/routes/blog/[slug]/: +page.svelte  +page.ts
frontend/src/routes/components/: PostPreview.svelte  Posts.svelte
frontend/src/routes/concept/: +layout.svelte  +page.svelte
frontend/src/routes/concept/about/: +page.svelte
frontend/src/routes/concept/components/: Comment.svelte  Comments.svelte  Concept.svelte  ConceptPreview.svelte
frontend/src/routes/concept/create/: +page.svelte
frontend/src/routes/concept/login/: +page.svelte
frontend/src/routes/concept/register/: +page.svelte
frontend/src/routes/concept/settings/: +layout.svelte  +page.svelte
frontend/src/routes/home/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/settings/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/: app.css
(+9 files in other folders)
