[project]
name = "concept"
version = "0.1.0"
dependencies = [
    "flask"
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material",
]
lint = [
    "ruff"
]
others = [
    "pre-commit"
]
test = [
    "pytest"
]
dev = [
    "concept[docs, lint, others, test]"
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyles
    "I",    # isort
    "ANN",  # flake8 type annotations
    "RUF"   # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
packages = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true